unpackaged/main/default/objects/Account/fields/New_Test_Field__c.field-meta.xml
<CustomField>
    <fullName>New_Test_Field__c</fullName>
    <label>New Test Field</label>
    <length>18</length>
    <type>Text</type>
</CustomField>