unpackaged/main/default/objects/Account/fields/Related_Documents__c.field-meta.xml
<CustomField>
    <fullName>Related_Documents__c</fullName>
    <description>Link to the folder where related documents for this Account are stored</description>
    <inlineHelpText>Link to the folder where related documents for this Account are stored</inlineHelpText>
    <label>Related Documents</label>
    <type>Url</type>
</CustomField>