unpackaged/main/default/objects/Account/fields/Supporter_ID__c.field-meta.xml
<CustomField>
    <fullName>Supporter_ID__c</fullName>
    <description>SCIGT-56: This is a user friendly ID that is used to identify individuals.</description>
    <displayFormat>S{0000000}</displayFormat>
    <label>Supporter ID</label>
    <type>AutoNumber</type>
</CustomField>